backport: re PR target/48252 (ARM neon: problem with consecutive vzip, vuzp and vtrn)

Backport from mainline:
	2011-04-18  Ulrich Weigand  <ulrich.weigand@linaro.org>
		    Ira Rosen  <ira.rosen@linaro.org>

	PR target/48252
	* config/arm/arm.c (neon_emit_pair_result_insn): Swap arguments
	to match neon_vzip/vuzp/vtrn_internal.
	* config/arm/neon.md (neon_vtrn<mode>_internal): Make both
	outputs explicitly dependent on both inputs.
	(neon_vzip<mode>_internal, neon_vuzp<mode>_internal): Likewise.

From-SVN: r173418